Fixed PokeRails logo to link to different things if logged in. Fixed CSS bug that created extra gaps for the devise divs - flash and notice.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,4 @@
  # LESS
  *= require devise_bootstrap_views_less
  */
+ div:empty {display: none};
